novator: ACORN-955 new menu: image distorted fix

--- a/public_html/extensions/novator/storefront/view/novator/css/tm_style.css
+++ b/public_html/extensions/novator/storefront/view/novator/css/tm_style.css
@@ -3815,7 +3815,9 @@ input[type="number"] {
     }
     #MegaMenuCategoryCarousel .card .img-wrapper img{
         max-height: 100%;
-        width: 100%;
+        width: auto;
+        max-width: 250px;
+        margin: auto;
         border-radius: 13px;
     }
 }
